--- a/Demos/Buttons/Wisej.DemoBrowser.Button/Features.resx
+++ b/Demos/Buttons/Wisej.DemoBrowser.Button/Features.resx
@@ -374,9 +374,9 @@
         TG9jYXRpb24EU2l6ZQZBbmNob3IBBAQEBBhTeXN0ZW0uRHJhd2luZy5SZWN0YW5nbGUDAAAAFFN5c3Rl
         bS5EcmF3aW5nLlBvaW50AwAAABNTeXN0ZW0uRHJhd2luZy5TaXplAwAAABZXaXNlai5XZWIuQW5jaG9y
         U3R5bGVzAgAAAAIAAAAGBAAAAAVQaG9uZQX7////GFN5c3RlbS5EcmF3aW5nLlJlY3RhbmdsZQQAAAAB
-        eAF5BXdpZHRoBmhlaWdodAAAAAAICAgIAwAAAPMBAACzAgAAHwAAAIYCAAAF+v///xRTeXN0ZW0uRHJh
+        eAF5BXdpZHRoBmhlaWdodAAAAAAICAgIAwAAAOQBAAC3AgAAEgAAAIoCAAAF+v///xRTeXN0ZW0uRHJh
         d2luZy5Qb2ludAIAAAABeAF5AAAICAMAAAAgAAAABwEAAAX5////E1N5c3RlbS5EcmF3aW5nLlNpemUC
-        AAAABXdpZHRoBmhlaWdodAAACAgDAAAA1AEAAC0AAAAF+P///xZXaXNlai5XZWIuQW5jaG9yU3R5bGVz
+        AAAABXdpZHRoBmhlaWdodAAACAgDAAAA0gEAAC0AAAAF+P///xZXaXNlai5XZWIuQW5jaG9yU3R5bGVz
         AQAAAAd2YWx1ZV9fAAgCAAAADAAAAAs=
 </value>
   </data>
@@ -401,9 +401,9 @@
         TG9jYXRpb24EU2l6ZQZBbmNob3IBBAQEBBhTeXN0ZW0uRHJhd2luZy5SZWN0YW5nbGUDAAAAFFN5c3Rl
         bS5EcmF3aW5nLlBvaW50AwAAABNTeXN0ZW0uRHJhd2luZy5TaXplAwAAABZXaXNlai5XZWIuQW5jaG9y
         U3R5bGVzAgAAAAIAAAAGBAAAAAVQaG9uZQX7////GFN5c3RlbS5EcmF3aW5nLlJlY3RhbmdsZQQAAAAB
-        eAF5BXdpZHRoBmhlaWdodAAAAAAICAgIAwAAAPMBAAAAAwAAHwAAANMCAAAF+v///xRTeXN0ZW0uRHJh
+        eAF5BXdpZHRoBmhlaWdodAAAAAAICAgIAwAAAOQBAAAEAwAAEgAAANcCAAAF+v///xRTeXN0ZW0uRHJh
         d2luZy5Qb2ludAIAAAABeAF5AAAICAMAAAAgAAAAugAAAAX5////E1N5c3RlbS5EcmF3aW5nLlNpemUC
-        AAAABXdpZHRoBmhlaWdodAAACAgDAAAA1AEAAC0AAAAF+P///xZXaXNlai5XZWIuQW5jaG9yU3R5bGVz
+        AAAABXdpZHRoBmhlaWdodAAACAgDAAAA0gEAAC0AAAAF+P///xZXaXNlai5XZWIuQW5jaG9yU3R5bGVz
         AQAAAAd2YWx1ZV9fAAgCAAAADAAAAAs=
 </value>
   </data>
@@ -428,9 +428,9 @@
         TG9jYXRpb24EU2l6ZQZBbmNob3IBBAQEBBhTeXN0ZW0uRHJhd2luZy5SZWN0YW5nbGUDAAAAFFN5c3Rl
         bS5EcmF3aW5nLlBvaW50AwAAABNTeXN0ZW0uRHJhd2luZy5TaXplAwAAABZXaXNlai5XZWIuQW5jaG9y
         U3R5bGVzAgAAAAIAAAAGBAAAAAVQaG9uZQX7////GFN5c3RlbS5EcmF3aW5nLlJlY3RhbmdsZQQAAAAB
-        eAF5BXdpZHRoBmhlaWdodAAAAAAICAgIAwAAAPMBAABNAwAAHwAAACADAAAF+v///xRTeXN0ZW0uRHJh
+        eAF5BXdpZHRoBmhlaWdodAAAAAAICAgIAwAAAOQBAABRAwAAEgAAACQDAAAF+v///xRTeXN0ZW0uRHJh
         d2luZy5Qb2ludAIAAAABeAF5AAAICAMAAAAgAAAAbQAAAAX5////E1N5c3RlbS5EcmF3aW5nLlNpemUC
-        AAAABXdpZHRoBmhlaWdodAAACAgDAAAA1AEAAC0AAAAF+P///xZXaXNlai5XZWIuQW5jaG9yU3R5bGVz
+        AAAABXdpZHRoBmhlaWdodAAACAgDAAAA0gEAAC0AAAAF+P///xZXaXNlai5XZWIuQW5jaG9yU3R5bGVz
         AQAAAAd2YWx1ZV9fAAgCAAAADAAAAAs=
 </value>
   </data>
@@ -455,8 +455,8 @@
         U2l6ZQZBbmNob3IITG9jYXRpb24BBAQEBBhTeXN0ZW0uRHJhd2luZy5SZWN0YW5nbGUDAAAAE1N5c3Rl
         bS5EcmF3aW5nLlNpemUDAAAAFldpc2VqLldlYi5BbmNob3JTdHlsZXMCAAAAFFN5c3RlbS5EcmF3aW5n
         LlBvaW50AwAAAAIAAAAGBAAAAAVQaG9uZQX7////GFN5c3RlbS5EcmF3aW5nLlJlY3RhbmdsZQQAAAAB
-        eAF5BXdpZHRoBmhlaWdodAAAAAAICAgIAwAAAPMBAACaAwAAHwAAAG0DAAAF+v///xNTeXN0ZW0uRHJh
-        d2luZy5TaXplAgAAAAV3aWR0aAZoZWlnaHQAAAgIAwAAANQBAAAtAAAABfn///8WV2lzZWouV2ViLkFu
+        eAF5BXdpZHRoBmhlaWdodAAAAAAICAgIAwAAAOQBAACeAwAAEgAAAHEDAAAF+v///xNTeXN0ZW0uRHJh
+        d2luZy5TaXplAgAAAAV3aWR0aAZoZWlnaHQAAAgIAwAAANIBAAAtAAAABfn///8WV2lzZWouV2ViLkFu
         Y2hvclN0eWxlcwEAAAAHdmFsdWVfXwAIAgAAAAwAAAAF+P///xRTeXN0ZW0uRHJhd2luZy5Qb2ludAIA
         AAABeAF5AAAICAMAAAAgAAAAIAAAAAs=
 </value>
@@ -506,7 +506,7 @@
         CExvY2F0aW9uAQQEE1N5c3RlbS5EcmF3aW5nLlNpemUDAAAAFFN5c3RlbS5EcmF3aW5nLlBvaW50AwAA
         AAIAAAAGBAAAAAVQaG9uZQX7////E1N5c3RlbS5EcmF3aW5nLlNpemUCAAAABXdpZHRoBmhlaWdodAAA
         CAgDAAAAFQIAAM8DAAAF+v///xRTeXN0ZW0uRHJhd2luZy5Qb2ludAIAAAABeAF5AAAICAMAAAAZAAAA
-        GP///ws=
+        GQAAAAs=
 </value>
   </data>
   <data name="$this.ResponsiveProfiles1" mimetype="application/x-microsoft.net.object.binary.base64">
