--- a/Wisej.DemoBrowser/Mobile/MobileDemoView.resx
+++ b/Wisej.DemoBrowser/Mobile/MobileDemoView.resx
@@ -123,6 +123,9 @@
   <metadata name="animation2.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>130, 17</value>
   </metadata>
+  <data name="labelDescription.Text" xml:space="preserve">
+    <value>&lt;b&gt;Wisej.NET&lt;/b&gt; is the most advanced, enterprise-scale, ASP.NET and ASP.NET Core development system in .NET. It covers just about the entire spectrum of features that business developers need to build and manage complex web applications.</value>
+  </data>
   <metadata name="$this.RulerSnapLines" mimetype="application/x-microsoft.net.object.binary.base64">
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFFTeXN0ZW0uRHJhd2luZywgVmVyc2lvbj00LjAuMC4wLCBDdWx0
